mfe-system-examples/messages/k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mfe-system-examples-messages-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /apps/messages

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mfe-system-examples-messages-route
spec:
  routes:
    - kind: Rule
      match: PathPrefix(`/apps/messages`)
      services:
        - name: mfe-system-examples-messages
          port: 80
      middlewares:
        - name: mfe-system-examples-messages-stripprefix
